[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pychor"
description = "Library-based choreographic programming for Python"
authors = [{name = "Joe Near", email = "jnear@uvm.edu"}]
version = "0.1"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/uvm-plaid/pychor"

[project.optional-dependencies]
examples = [
     "galois",
     "pynacl",
     "numpy",
     ]
