[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pychor"
description = "Library-based choreographic programming for Python"
authors = [{name = "Joseph Near", email = "jnear@uvm.edu"}]
version = "0.2.2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/uvm-plaid/pychor"

[project.optional-dependencies]
examples = [
     "galois",
     "pynacl",
     "numpy",
     ]
